--- a/registrar.html
+++ b/registrar.html
@@ -5,8 +5,8 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Hotspot - Signet</title>
-  <meta name="description" content="Hotspot Signet">
+  <title>Hotspot - KRS</title>
+  <meta name="description" content="Hotspot KRS">
   <link rel="stylesheet" href="./css/style.css">
   <link rel="stylesheet" href="./css/global/global.css">
   <link rel="stylesheet" href="./css/componentes/estilos.css">
@@ -18,7 +18,7 @@
   <main class="registrar-bg">
     <div class="registrar container">
       <div class="registrar-logo">
-        <a href="./"><img src="./img/logo/signet-logo.svg" width="190" height="131" alt="logo-signet"></a>
+        <a href="./"><img src="./img/logo/KRSv2.svg" width="150" height="131" alt="logo-KRS"></a>
       </div>
 
       <form action="registro.php" method="POST" class="registrar-formulario formulario">
