--- a/termos.html
+++ b/termos.html
@@ -5,8 +5,8 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Termos | Signet</title>
-  <meta name="description" content="Hotspot Signet">
+  <title>Termos | KRS</title>
+  <meta name="description" content="Hotspot KRS">
   <link rel="stylesheet" href="./css/style.css">
   <link rel="stylesheet" href="./css/global/global.css">
   <link rel="stylesheet" href="./css/componentes/estilos.css">
@@ -18,7 +18,7 @@
 <body>
   <header class="header">
     <div class="header-imagem">
-      <img src="./img/logo/signet-logo.svg" width="190" height="131" alt="logo-signet">
+      <img src="./img/logo/KRSv2.svg" width="150" height="131" alt="logo-KRS">
     </div>
     <nav class="header-menu">
 
@@ -40,7 +40,7 @@
         <p>,nos termos da Política de Privacidade constante abaixo.</p>
         <p>Declaro que este consentimento se deu de forma livre, expressa, individual, clara, específica e legítima e que estou ciente que caso queira revogar a presente autorização basta <a href="https://docs.google.com/forms/d/e/1FAIpQLScPOk-0hvrmNj01wk2po0DjfJsIQ8CZLOLYffE2idjNYmx5Ag/viewform">clicar aqui.</a> </p>
         <p>Assim, estando ciente e de acordo com os termos deste, firmo meu consentimento através da checagem do campo 'Eu aceito o Termo de Consentimento do uso dos meus dados' no formulário de cadastro.</p>
-        <p>Em caso de dúvidas, o contato deverá ser realizado através do email <a href="mailto:marketing@signets.com.br">marketing@signets.com.br</a>.</p>
+        <p>Em caso de dúvidas, o contato deverá ser realizado através do email <a href="mailto:marketing@KRSs.com.br">marketing@KRSs.com.br</a>.</p>
       </div>
 
     </div>
